fixed jumping in carousel

--- a/public/assets/css/background.css
+++ b/public/assets/css/background.css
@@ -1,71 +1,71 @@
 .beach-bunny {
-    background: url('beachBunnyBackground.png') no-repeat center -100px;
+    background: url('beachBunnyBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .biker-babe {
-	background: url('bikerBabeBackground.png') no-repeat center -100px;
+	background: url('bikerBabeBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .blonde-bombshell {
-	background: url('blondeBombshellBackground.png') no-repeat center -100px;
+	background: url('blondeBombshellBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .bootylicious-babe {
-	background: url('bootyliciousBackground.png') no-repeat center -100px;
+	background: url('bootyliciousBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .daddy\'s-girl {
-	background: url('daddysGirlBackground.png') no-repeat center -100px;
+	background: url('daddysGirlBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .fierce-cowgirl {
-    background: url('fierceCowgirlBackground.png') no-repeat center -100px;
+    background: url('fierceCowgirlBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .fitness-chic {
-	background: url('fitnessChicBackground.png') no-repeat center -100px;
+	background: url('fitnessChicBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .girl-next-door {
-	background: url('girlNextDoorBackground.png') no-repeat center -100px;
+	background: url('girlNextDoorBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .ms-madison-ave {
-    background: url('madisonAveBackground.png') no-repeat center -100px;
+    background: url('madisonAveBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .natural-beauty {
-    background: url('naturalBeautyBackground.png') no-repeat center -100px;
+    background: url('naturalBeautyBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .sexy-brunette {
-    background: url('sexyBrunetteBackground.png') no-repeat center -100px;
+    background: url('sexyBrunetteBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
 }
 .tattooed-baby {
-    background: url('tattooedBabyBackground.png') no-repeat center -100px;
+    background: url('tattooedBabyBackground.png') no-repeat center center;
 	height: 550px;
 	background-size: cover;
 	background-color: black;
